# Problem-Solution

./: README.md
Casadi/: 1_安装CASADI.md  2_符号框架.md  3_函数对象.md  4_非线性规划.md  5_casadi_mpc应用.md
Casadi/code/: 1_sx_em.py  2_mx_em.py  3_dm_em.py  4_fun_em.py  5_nlp_em.py
Cpp/: 八股文.md  基础内容.md
Eigen/: Eigen常用内容.md
Eigen/code/: 1_Matrix.cpp  2_Array.cpp  CMakeLists.txt
Env/: Docker安装.md  Ubuntu配置Clash.md  WSL2配置Ubuntu.md  conda虚拟环境安装g2opy.md
Git/: git常用指令.md  新系统git与github建立ssh链接.md
Kinetics/: Precursor_tricycle_Kinetics.md  Precursor_tricycle_dynamics.md  QP.md  main.py  tricycle_Kinetics.md
ROS/: CUDA 安装.md  Ubuntu配置Clash.md  WSL2配置Ubuntu.md  conda虚拟环境安装g2opy.md  安装 Anaconda.md  配置Docker环境.md
Recurrent/: cbf.md  teb_local_planner.md
Spline/: B样条曲线.md  三次样条曲线.md  贝塞尔曲线.md
Spline/code/: 1_Bézier.py  1_Bézier_interactive.py  2_cubic_spline.py
Theory/: LM.md  Levenberg-Marquardt (LM) 算法.md  P_重要性采样.md  e.cpp
Theory/code/: lm.py
TrajOpt/: 1_轨迹优化简介.md  2_移动物块例子.md  3_梯形配点法.md  4_Hermite–Simpson配点法.md
TrajOpt/code/: 2_main.py  3_main.py
TrajOpt/picture/: 1_轨迹优化简介.md
Tutorial/: 1.最小二乘路径求解.md  1.最小二乘路径求解A.md  2.TEB问题描述.md  2.最小二乘路径求解B.md  3.TEB问题描述.md  3.casdia求解路径问题.md  4.TEB问题描述及求解.md  5.mpc问题.md  5.mpc问题描述.md  5.求解代码优化.md  6.mpc求解.md  6.mppi问题.md  7.mpc避障约束.md  8.LQR.md  8.mppi问题.md  main.py  sim_2_mpc_mul_shooting.py  几何碰撞检测.md  半空间约束.md  局部目标包裹器.md
Tutorial/code/: 1_path_solveA.py  2_path_solveB.py  3.TEB_solve.py  3_casadi_solve.py  3_casadi_solve_dynamic.py  4_TEB_solve.py  4_TEB_solve_dynamic.py  5_TEB_new.py  5_mpc_solve.py  robot_world.yaml  (+4 more)
(+2 files in other folders)
